src/test/ui/borrowck/borrowck-or-init.stderr
error[E0381]: borrow of possibly uninitialized variable: `i`
  --> $DIR/borrowck-or-init.rs:5:20
   |
LL |     println!("{}", i);
   |                    ^ use of possibly uninitialized `i`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
